<resources>
    <string name="app_name">ToneDeath</string>
    <string name="title_initfinal_list">InitFinals</string>
    <string name="title_initfinal_detail">InitFinal Detail</string>
    <string name="appwidget_text">Best Score : 0</string>
    <string name="add_widget">Add widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GameOver">GameOver</string>
    <string name="display_score">Best score : </string>
    <string name="getExtraLife">Watch a video ad and get an extra life</string>
    <string name="continuePlay">Would you like to continue?</string>
    <string name="nothx">No thanks</string>
    <string name="confirmWatchAd">Watch it</string>
    <string name="current_score">Score :</string>
    <string name="tone1">first tone</string>
    <string name="tone2">second tone</string>
    <string name="tone3">third tone</string>
    <string name="tone4">fourth tone</string>
    <string name="content_desc_window">chinese window</string>
    <string name="corner">corner</string>
    <string name="play">play</string>
    <string name="coin">coin</string>
    <string name="learn">learn</string>
    <string name="practice">practice</string>
    <string name="sakura">Cherry three</string>
    <string name="xiebian">xiebian</string>
    <string name="fanwujiu">fan wujiu</string>
    <string name="badanwser">bad answer</string>
    <string name="goodanswer">good answer</string>
    <string name="game_over_text">Listen to the difference between those tones</string>
    <string name="initial">Initials</string>
    <string name="finals">Finals</string>
    <string name="switchList">switch</string>
    <string name="default_error">An error occured</string>
</resources>
