<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:adjustViewBounds="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.learning.ListeningActivity">

    <ImageButton
        android:id="@+id/button_listening_tone1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/material_color_red_700"
        android:src="@drawable/tone_1"
        app:layout_constraintBottom_toTopOf="@+id/button_listening_tone3"
        app:layout_constraintEnd_toStartOf="@+id/button_listening_tone2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_listening_hanzi"
        android:contentDescription="@string/tone1" />

    <ImageButton
        android:id="@+id/button_listening_tone2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/material_color_pink_700"
        android:src="@drawable/tone_2"
        app:layout_constraintBottom_toTopOf="@+id/button_listening_tone4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_listening_tone1"
        app:layout_constraintTop_toBottomOf="@+id/imageView_listening_hanzi"
        android:contentDescription="@string/tone2" />

    <ImageButton
        android:id="@+id/button_listening_tone3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/material_color_purple_700"
        android:src="@drawable/tone_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_listening_tone4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_listening_tone1"
        android:contentDescription="@string/tone3" />

    <ImageButton
        android:id="@+id/button_listening_tone4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/material_color_deep_purple_700"
        android:src="@drawable/tone_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_listening_tone3"
        app:layout_constraintTop_toBottomOf="@+id/button_listening_tone2"
        android:contentDescription="@string/tone4" />

    <ImageView
        android:id="@+id/imageView_listening_hanzi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".5"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/window"
        android:contentDescription="@string/content_desc_window" />

    <TextView
        android:id="@+id/textView_listening_pinyin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_listening_hanzi"
        app:layout_constraintEnd_toEndOf="@+id/imageView_listening_hanzi"
        app:layout_constraintTop_toTopOf="@+id/imageView_listening_hanzi"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        tools:ignore="MissingPrefix" />

</androidx.constraintlayout.widget.ConstraintLayout>